# django-lazysignup

./: conftest.py  pyproject.toml  setup.py
custom_user_tests/tests/: test_custom_user_model.py
lazysignup/: models.py  urls.py  version.py  views.py
lazysignup/management/commands/: remove_expired_users.py
lazysignup/tests/: test_modernization.py  tests.py  urls.py
